# Memorie-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  cbindgen.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: core_bench.rs
bindings/go/: go.mod
bindings/go/demo/: main.go
bindings/go/memoire/: memoire.go  memoire_test.go
bindings/node/: demo.js  index.js  package.json  test.js
bindings/python/: README.md  pyproject.toml
bindings/python/memoire/: __init__.py  adapters.py  client.py
bindings/python/tests/: conftest.py  test_memoire.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/databases/: route.ts
dashboard/src/app/api/logs/: route.ts
docs/: ARCHITECTURE.md  FFI_GUIDE.md  RELEASE.md
examples/: agent_demo.py  aider_plugin.py  basic_usage.rs  brutal_moment_demo.py  mcp_server.py  openai_agent.py
include/: memoire.h
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/tests/: test_server.py
scripts/: agent_behavior_benchmark.py  benchmark_report.py  download_model.py
src/: chunker.rs  embedder.rs  error.rs  ffi.rs  lib.rs  py_ffi.rs  quality.rs  store.rs
tests/: integration_test.rs
