[package]
name = "memoire"
version = "0.1.0"
edition = "2021"
description = "A local-first, embeddable long-term memory engine for AI coding agents"
license = "MIT"
repository = "https://github.com/yourusername/memoire"
keywords = ["ai", "memory", "embeddings", "sqlite", "ffi"]
categories = ["database", "science::ml"]

[lib]
name = "memoire"
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
fastembed = { version = "=5.13.2", default-features = false, features = ["online", "ort-download-binaries-native-tls"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
walkdir = "2.4"
rayon = "1.9"
once_cell = "1.19"
dirs = "5.0"


[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bin]]
name = "memoire"
path = "src/bin/cli.rs"

[[bench]]
name = "core_bench"
harness = false

[build-dependencies]
# Uncomment to auto-generate include/memoire.h from FFI source:
# cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
