[package]
name = "memoire"
version = "0.1.0"
edition = "2021"
description = "A local-first, embeddable long-term memory engine for AI coding agents"
license = "MIT"
repository = "https://github.com/tazwaryayyyy/Memorie-AI"
homepage = "https://github.com/tazwaryayyyy/Memorie-AI"
readme = "README.md"
keywords = ["ai", "memory", "embeddings", "sqlite", "ffi"]
categories = ["database", "science::ml"]
include = [
    "/src/**",
    "/examples/basic_usage.rs",
    "/benches/**",
    "/include/memoire.h",
    "/README.md",
    "/LICENSE",
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
]

[lib]
name = "memoire"
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
fastembed = { version = "=5.13.2", default-features = false, features = ["online", "ort-download-binaries-native-tls"] }
blake3 = "1"
instant-distance = "0.6"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
walkdir = "2.4"
rayon = "1.9"
once_cell = "1.19"
dirs = "5.0"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.22"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bin]]
name = "memoire"
path = "src/bin/cli.rs"

[[bin]]
name = "memoire-server"
path = "src/bin/memoire_server.rs"

[[bench]]
name = "core_bench"
harness = false

[build-dependencies]
# Uncomment to auto-generate include/memoire.h from FFI source:
# cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
