[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "memoire"
version = "0.1.0"
description = "Local-first semantic memory engine for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "memory", "embeddings", "semantic-search", "llm", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/tazwaryayyyy/Memorie-AI"
Repository = "https://github.com/tazwaryayyyy/Memorie-AI"
Issues = "https://github.com/tazwaryayyyy/Memorie-AI/issues"
Changelog = "https://github.com/tazwaryayyyy/Memorie-AI/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3"]
manifest-path = "../../Cargo.toml"
module-name = "memoire.memoire"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
